--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>POTSEC - Prince Osei-Tutu Skills Aquisition College</title>
+    <title>POTSEC - PORTAL</title>
   </head>
 
   <body>
